tests/feature_tests/error_break_continue.c
int main() {
  // error: break statement not in loop
  break;

  // error: continue statement not in loop
  continue;
}
